adding sling autostart (wip)