@@ -187,27 +187,78 @@
     <profiles>
         <profile>
             <id>it</id>
+            <properties>
+                <http.port>8080</http.port>
+                <http.host>localhost</http.host>
+                <sling.vm.options>-Xmx1024m -XX:MaxPermSize=256m -Djava.awt.headless=true</sling.vm.options>
+            </properties>
             <build>
                 <plugins>
+                    <!--<plugin>-->
+                        <!--<groupId>org.codehaus.mojo</groupId>-->
+                        <!--<artifactId>build-helper-maven-plugin</artifactId>-->
+                        <!--<executions>-->
+                            <!--<execution>-->
+                                <!--<id>reserve-network-port</id>-->
+                                <!--<goals>-->
+                                    <!--&lt;!&ndash; pre-integration-test is too late &ndash;&gt;-->
+                                    <!--<goal>reserve-network-port</goal>-->
+                                <!--</goals>-->
+                                <!--<phase>process-resources</phase>-->
+                                <!--<configuration>-->
+                                    <!--<portNames>-->
+                                        <!--<portName>http.port</portName>-->
+                                    <!--</portNames>-->
+                                <!--</configuration>-->
+                            <!--</execution>-->
+                        <!--</executions>-->
+                    <!--</plugin>-->
                     <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>build-helper-maven-plugin</artifactId>
+                        <!-- the Sling instance is provisioned from the model in src/main/provisioning/model.txt -->
+                        <groupId>org.apache.sling</groupId>
+                        <artifactId>slingstart-maven-plugin</artifactId>
+                        <version>1.7.16</version>
+                        <extensions>true</extensions>
                         <executions>
                             <execution>
-                                <id>reserve-network-port</id>
+                                <id>prepare-launchpad-package</id>
+                                <phase>pre-integration-test</phase>
                                 <goals>
-                                    <!-- pre-integration-test is too late -->
-                                    <goal>reserve-network-port</goal>
+                                    <goal>prepare-package</goal>
                                 </goals>
-                                <phase>process-resources</phase>
-                                <configuration>
-                                    <portNames>
-                                        <portName>http.port</portName>
-                                        <portName>sling.control.port</portName>
-                                    </portNames>
-                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>build-launchpad-package</id>
+                                <phase>pre-integration-test</phase>
+                                <goals>
+                                    <goal>package</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>start-container-before-IT</id>
+                                <goals>
+                                    <goal>start</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>stop-container-after-IT</id>
+                                <goals>
+                                    <goal>stop</goal>
+                                </goals>
                             </execution>
                         </executions>
+                        <configuration>
+                            <usePomDependencies>true</usePomDependencies>
+                            <attachArtifact>false</attachArtifact>
+                            <shouldBlockUntilKeyIsPressed>true</shouldBlockUntilKeyIsPressed>
+                            <servers>
+                                <server>
+                                    <id>singleinstance</id>
+                                    <port>${http.port}</port>
+                                    <vmOpts>${sling.vm.options}</vmOpts>
+                                </server>
+                            </servers>
+                        </configuration>
                     </plugin>
 
                     <!-- ====================================================================== -->
@@ -241,7 +292,6 @@
                                     <installDirectory>${project.build.directory}/node</installDirectory>
                                 </configuration>
                             </execution>
-                            <!-- TODO: Autostart and stop sling -->
                             <execution>
                                 <id>yarn test</id>
                                 <phase>integration-test</phase>
@@ -256,8 +306,6 @@
                         </executions>
                     </plugin>
                 </plugins>
-
-
             </build>
         </profile>
     </profiles>
